--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@clerk/nextjs": "^4.29.1",
     "@hello-pangea/dnd": "^16.5.0",
     "@hookform/resolvers": "^3.3.3",
+    "@mux/mux-node": "^7.3.5",
+    "@mux/mux-player-react": "^2.3.1",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -29,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.1",
