--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.302.0",
     "next": "^13.5.6",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
