--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "recharts": "^2.11.0",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.1",
